--- a/design.html
+++ b/design.html
@@ -21,7 +21,7 @@
     <section>
         <div class="first">
             <div class="image">
-                <img class="image1" src="images/looo.png" width="80%" height="100%">
+                <img class="image1" src="images/looo.png" width="80%">
             </div>
             <div class="contact">
                 <p class="call">CALL OUR OFFICE NOW!</p>
@@ -48,7 +48,7 @@
   <section>
         <div class="flex">
             <div class="pic-1">
-                <img src="images/gurantee_banner.gif" width="100%" height="100%">
+                <img src="images/gurantee_banner.gif" width="100%" height="490px">
             </div>
             <div class="pic-2">
                 <div class="box5">
@@ -226,8 +226,7 @@
 
 
             <div class="center">
-                <article>
-                    <div>
+                    <div class="mid">
                         <h1>>PAGE TITLE HERE</h1>
                     </div>
 
@@ -252,7 +251,6 @@
                             pariatur.Excepteur sint occaecatcupidatat non proident,sunt in anim id est laborum
                         </p>
                     </div>
-                </article>
             </div>
 
 
